Fix share button alignment

--- a/assets/css/block.css
+++ b/assets/css/block.css
@@ -215,3 +215,18 @@ body.coreCSB .bordercolorb6a533a1 {
 .job-page #innershell {
   padding-top: 100px;
 }
+
+.job-page #content .searchwell {
+	display: none !important;
+}
+
+.job-page #rss-wrapper {
+	position: absolute;
+	right: 2rem;
+}
+
+@media only screen and (max-width: 768px) {
+	.job-page #rss-wrapper {
+		right: 0;
+	}
+}
